# ecosystem-impact-factors

./: .gitignore  .pre-commit-config.yaml  .pre-commit-configs.yaml  README.md  requirements.txt  setup.cfg
core/dags/: dag_configs.yaml  dags.py
core/utils/: general_utils.py  util_configs.yaml
originals/: biodiversity.py  carbon_new.py  impact_factors.py
