
[options]
python_requires = >=3.12

[flake8]
max-line-length = 88  # To be black compatible
ignore =  # Style choices + compatibility with black
    D100,
    D205,
    D400,
    W503
# D100 Missing docstring in public module
# D205 1 blank line required between summary line and description
# D400 First line should end with a period
# W503 line break before binary operator (conflicts with black)

[isort]
profile = black  # To be black compatible

[mypy]
python_version = 3.12
# Untyped definitions and calls
ignore_missing_imports = False
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = False
check_untyped_defs = True
# None and Optional handling
strict_optional = True
# Warnings
warn_unreachable = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True

[mypy-yaml.*]
ignore_missing_imports = True
