
[options]
python_requires = >=3.11

[flake8]
# To be black compatible
max-line-length = 88
# Style choices + compatibility with black
ignore =
    D100,
    D205,
    D400,
    W503
# D100 Missing docstring in public module
# D205 1 blank line required between summary line and description
# D400 First line should end with a period
# W503 line break before binary operator (conflicts with black)

[isort]
# To be black compatible
profile = black

[mypy]
python_version = 3.11
# Untyped definitions and calls
ignore_missing_imports = False
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = False
check_untyped_defs = True
# None and Optional handling
strict_optional = True
# Warnings
warn_unreachable = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True

[mypy-yaml.*]
ignore_missing_imports = True
